Implementar sistema de tracking de juegos y mejoras en perfil
- Sistema de tracking de juegos:
  * Registrar automáticamente cuando se abre un juego (status: playing)
  * Marcar juegos como completados cuando se cumplen criterios específicos
  * Endpoint API para marcar juegos como completados
  * Interfaz JavaScript para comunicación entre juegos HTML5 y Android

- Mejoras en perfil:
  * Agregar fecha de registro (Se unió en [mes] de [año])
  * Sección de Juegos Recientes con RecyclerView
  * Mostrar juegos que el usuario ha estado jugando
  * Estadísticas actualizadas (Completados y Jugando)
  * Estado vacío mejorado con icono y mensaje personalizado

- Ajustes en UI:
  * Reducir tamaño de fuente de descripciones en cards (10sp)
  * Cambiar 'videojuegos' por 'juegos' en catálogo
  * Actualizar descripción de Frootilupis (remover referencia a Candy Crush)

- Criterios de completación por juego:
  * SnackAttack: Nivel 5+
  * CerealKiller: Nivel 3+
  * Flootilupis: 1000+ puntos
  * Chocopops: 500+ puntos
  * Munchies: Todos los pares encontrados (8)

--- a/android/app/src/main/assets/games/chocopops.html
+++ b/android/app/src/main/assets/games/chocopops.html
@@ -426,6 +426,15 @@
                 document.getElementById('highScore').textContent = score;
             }
             
+            // Si se alcanza un puntaje alto (500+), marcar como completado
+            if (score >= 500 && typeof Android !== 'undefined' && Android.gameCompleted) {
+                try {
+                    Android.gameCompleted();
+                } catch (e) {
+                    console.log('No se pudo notificar completación del juego');
+                }
+            }
+            
             document.getElementById('finalScore').textContent = score;
             document.getElementById('gameOver').classList.add('show');
             document.getElementById('startBtn').style.display = 'block';
