--- a/android/app/src/main/assets/games/cerealkiller.html
+++ b/android/app/src/main/assets/games/cerealkiller.html
@@ -512,6 +512,15 @@
                     // Mostrar mensaje de nivel completado
                     setTimeout(() => {
                         alert(`¡Nivel ${currentLevel - 1} completado! Ahora hay ${totalPairsToComplete} pares para unir.`);
+                        
+                        // Si se completa el nivel 3 o más, marcar el juego como completado
+                        if (currentLevel >= 3 && typeof Android !== 'undefined' && Android.gameCompleted) {
+                            try {
+                                Android.gameCompleted();
+                            } catch (e) {
+                                console.log('No se pudo notificar completación del juego');
+                            }
+                        }
                     }, 300);
                 }, 500);
             }
