--- a/android/app/src/main/assets/games/flootilupis.html
+++ b/android/app/src/main/assets/games/flootilupis.html
@@ -495,6 +495,15 @@
                 document.getElementById('highScore').textContent = score;
             }
             
+            // Si se alcanza un puntaje alto (1000+), marcar como completado
+            if (score >= 1000 && typeof Android !== 'undefined' && Android.gameCompleted) {
+                try {
+                    Android.gameCompleted();
+                } catch (e) {
+                    console.log('No se pudo notificar completación del juego');
+                }
+            }
+            
             document.getElementById('finalScore').textContent = score;
             document.getElementById('gameOver').classList.add('show');
             document.getElementById('startBtn').style.display = 'block';
